# GameEngine-D7049E

./: .clang-format  .gitignore  CMAKE.txt  CMakeLists.txt  CMakeSettings.json  Game.cpp  Game.h  GameEngine-D7049E.sln  GameEngine-D7049E.vcxproj  GameEngine-D7049E.vcxproj.filters  Global.h  README.md  clang-format.txt  clang-format_fabian.txt  main.cpp  plantuml.txt
Fantasy Pack/Buildings/: Aztec Pyramid.fpe  Aztec Shrine 1.fpe  Aztec Shrine 2.fpe  Aztec Shrine 3.fpe  Aztec Temple 1.fpe  Aztec Temple 2.fpe  Crypt 1.fpe  Crypt 2.fpe  Ruins Stairs.fpe  Statue Wall.fpe  aztec_pyramid.X  aztec_pyramid_D.dds  aztec_pyramid_N.dds  aztec_pyramid_S.dds  aztec_shrine_D.dds  aztec_shrine_N.dds  aztec_shrine_S.dds  aztec_temple_1.X  aztec_temple_2.X  aztec_temple_N.dds  aztec_temple_S.dds  crypt2.X  crypt_N.dds  crypt_S.dds  ruinstairs.X  shrine_1.X  shrine_2.X  shrine_3.X  stairs_D.dds  stairs_N.dds  stairs_S.dds  statuewall_N.dds  statuewall_S.dds
Fantasy Pack/Characters/: Barbarian.fpe  Desiccated Priest.X  Desiccated Priest.fpe  Desiccated Priest_noweap.X  Desiccated Priest_noweap.fpe  Desiccated Priest_noweap_D2.dds  Goblin animation list.txt  Goblin.X  Goblin.fpe  Goblin_noweap.fpe  Goblin_noweap_D2.dds  Imp Ally.fpe  Imp.X  Imp.fpe  Imp_D2.dds  Imp_noweap.X  Imp_noweap.fpe  Imp_noweap_D2.dds  Knight Ally.fpe  Knight animation list.txt  Knight.fpe  Ogre.X  Ogre.fpe  Ogre_D2.dds  Ogre_noweap.X  Ogre_noweap.fpe  Ogre_noweap_D2.dds  Orc.fpe  Orc_noweap.fpe  Ranger (female).fpe  Reptilian.X  Reptilian.fpe  Reptilian_noweap.fpe  Skeleton animation list.txt  Taurus.X  Taurus.fpe  Taurus_D2.dds  Taurus_noweap.X  Taurus_noweap.fpe  Taurus_noweap_D2.dds  (+27 more)
Fantasy Pack/Collectables/: Elixir Green.fpe  Elixir Red.fpe  Potion Purple.fpe  Potion Yellow.fpe  Rune (blue).fpe  Rune (green).fpe  Rune (red).fpe  Rune (yellow).fpe  Treasure Chest.X  Treasure Chest.fpe  Treasure Chest.txt  Treasure Chest_N.dds  Treasure Chest_S.dds  Treasure Chest_ao.dds  Treasure Chest_color.dds  Treasure Chest_gloss.dds  Treasure Chest_metalness.dds  Wooden Chest.fpe  Wooden Chest_D.dds  Wooden Chest_S.dds  Wooden Chest_ao.dds  Wooden Chest_gloss.dds  Wooden Chest_metalness.dds  Wooden Chest_normal.dds  elixir.X  elixirgreen_ao.dds  elixirgreen_color.dds  elixirgreen_gloss.dds  elixirred_S.dds  elixirred_ao.dds  elixirred_color.dds  elixirred_normal.dds  elixirredgloss.dds  potion.X  potionpurple_D.dds  potionpurple_S.dds  potionpurple_ao.dds  potionpurple_gloss.dds  potionyellow_ao.dds  potionyellow_color.dds  (+17 more)
Fantasy Pack/Decals/: Firefly Aura.dds  Firefly Aura.fpe
Fantasy Pack/Scenery/: Aztec Temple Podium (Medium).fpe  Aztec Temple Podium (Tall).fpe  Aztec Temple Podium.fpe  Fern.fpe  Ivy 1.fpe  Ivy 2.fpe  Kahbah Statue Broken.fpe  Kahbah Statue Hatless.fpe  Kahbah Statue Head.fpe  Kahbah Statue.fpe  Roots 1.fpe  Roots 2.fpe  Skull Full.fpe  Skull Half.fpe  Vines.fpe  Viney Tree (Dead).fpe  aztec_temple_D.dds  aztec_temple_podium.X  aztec_temple_podium_medium.X  aztec_temple_podium_tall.X  fern_N.dds  fern_S.dds  ivy1.X  ivy2.X  ivy_D.dds  ivy_S.dds  kahbah_statue.X  kahbah_statue_hatless.X  kahbah_statue_head.X  kahbah_statue_headless.X  kahbahstatue_D.dds  kahbahstatue_N.dds  kahbahstatue_S.dds  roots1.X  roots2.X  roots_D.dds  roots_N.dds  roots_S.dds  skull_D.dds  skull_N.dds  (+10 more)
Fantasy Pack/Weapons/: Axe.fpe  Fire Staff.X  Fire Staff.dbo  Fire Staff.fpe  Ice Staff.dbo  Ice Staff.fpe  Knife.fpe  Knight Sword.fpe  (+13 more)
resources/: ogre.cfg  resources.cfg
src/: Camera.cpp  Camera.h  CameraManager.h  Chunk.h  Defines.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  GameEngine.cpp  GameEngine.h  GameSceneManager.cpp  GameSceneManager.h  Global.h  Input.cpp  Input.h  Map.h  Physics.cpp  Physics.h  Player.h  Project.sln  Renderable.cpp  Renderable.h  SDL.h  Scene.cpp  Scene.h  Script.cpp  Script.h  ScriptData.cpp  ScriptData.h  Server.cpp  Server.h  Sound.h  UI.cpp  UI.h  main.cpp
(+46 files in other folders)
